# PhotoMate-Moonbot-Hackthon

./: .gitattributes  .gitignore  .gitmodules  .lfsconfig  AGENTS.md  CHANGELOG.md  DEPLOYMENT.md  LICENSE  QuickStart.md  README.md  check_robot_compat.py  deploy_to_robot.sh  galbot_sdk_wrapper.sh  install.sh  install_python_deps.sh  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  docs_service.py  main.py  (+6 more)
examples/cpp/: CMakeLists.txt
examples/cpp/galbot_motion/src/: forward_kinematics_example.cpp  get_link_names_example.cpp  inverse_kinematics_example.cpp
examples/cpp/galbot_navigation/src/: blocked_navigation_example.cpp  complete_running_example.cpp  get_navigation_status_example.cpp  linear_movement_example.cpp  non_blocking_navigation_example.cpp
examples/cpp/galbot_perception/src/: foundation_stereo_run_once_example.cpp
examples/cpp/galbot_robot/src/: audio_example.cpp  controller_management_example.cpp  get_bms_information_example.cpp  get_camera_data_example.cpp  get_camera_params.cpp  get_device_information_example.cpp  get_force_sensor_data_example.cpp  get_odom_example.cpp  get_ultrasonic_data_example.cpp  logger_example.cpp  set_base_velocity_example.cpp  set_gripper_command_example.cpp  set_joint_command_example.cpp  set_joint_commands_batch_example.cpp  whole_body_execution_map_example.cpp  whole_body_execution_odom_example.cpp  whole_body_execution_vel_example.cpp  whole_body_reset_zero_map_example.cpp  whole_body_reset_zero_odom_example.cpp
examples/cpp/tutorials/src/: example10_final_task.cpp  example1_galbot_control_started.cpp  example2_arm_manipulation.cpp  example3_robot_navigation.cpp  example4_sensor_data_collect.cpp  example5_pick_and_place.cpp  example6_execute_vla.cpp  example7_arm_manipulation2.cpp  example9_multiple_waypoints_planning.cpp
(+837 files in other folders)
